--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "<h1>Speed Unlimited- Proyecto</h1>\r <p>Este sitio es un proyecto de prueba para una pagina web de Speed Unlimited, donde se van a poder acercar a la marca segun lo que esten buscando.</p>",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-css": "node-sass --include-path scss scss/style.scss css/style.css",
+    "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "repository": {
     "type": "git",
